# Agentic-Enterprise-Knowledge-Copilot-with-GraphRAG

./: .env.example  .gitignore  AGENT_ENHANCEMENTS.md  README.md  pyproject.toml  requirements.txt  test_enhanced_agents.py
app/: __init__.py  main.py
app/agents/: planner_agent.py  summarizer_agent.py  verifier_agent.py
app/api/routes/: chat.py  feedback.py  health.py  ingestion.py
app/api/schemas/: chat_schema.py  document_schema.py  feedback_schema.py
app/cache/: redis_client.py
app/database/: repository.py
app/evaluation/: ragas_evaluator.py
app/graph/: agent_state.py  entity_extractor.py  graph_builder.py  graph_retriever.py  relationship_extractor.py  state_graph.py
app/ingestion/: chunking.py  pipeline.py
app/llms/: llm_router.py  openai_client.py
app/observability/: README.md  __init__.py  langsmith_config.py
app/parsers/: document_loader.py
app/retrieval/: bm25_search.py  hybrid_search.py  reranker.py  vector_search.py
app/security/: auth.py
app/utils/: config.py
app/workflows/: agentic_workflow.py
deployment/: docker-compose.yml
deployment/docker/: Dockerfile.api  Dockerfile.streamlit
frontend/: streamlit_app.py
tests/: test_api.py  test_evaluation.py  test_graph_context_extraction.py  test_ingestion.py  test_langsmith_config.py  test_retrieval_workflow.py
