[project]
name = "enterprise-knowledge-copilot-graphrag"
version = "0.1.0"
description = "Interview-ready Agentic Enterprise Knowledge Copilot with GraphRAG"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.37.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "openai>=1.40.0",
  "qdrant-client>=1.10.0",
  "neo4j>=5.22.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "rank-bm25>=0.2.2",
  "langgraph>=0.2.0",
  "langsmith>=0.1.90",
  "ragas>=0.1.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

